more changes to the app

--- a/assets/languages/ur.json
+++ b/assets/languages/ur.json
@@ -1,6 +1,6 @@
 {
   "hello": "السلام عليكم",
-  "OneTitle": " سے ہماری مادر وطن کو پاک کریں  COVID-19",
+  "OneTitle": " VIRUSES \n سے ہماری مادر وطن کو پاک کریں ",
   "Inspire": "حوصلہ افزائی",
   "Purify": "پاک کرو",
   "Active": "فعال",
@@ -8,7 +8,7 @@
   "Recovered": "بازیافت",
   "Submit": "جمع کرائیں",
   "Survivor": {
-    "t1": " سے لڑنے کے لیے  تمام نکات کا اندازہ لگائیں اور دریافت کریں کہ آپ کس طرح زندہ بچ گئے ہیں COVID-19",
+    "t1": "VIRUS \n سے لڑنے کے لیے  تمام نکات کا اندازہ لگائیں اور دریافت کریں کہ آپ کس طرح زندہ بچ گئے ہیں",
     "t2": "فوجی",
     "t3": " آپ وائرس کے بارے میں جانتے ہیں اور اس سے خود کی حفاظت کر سکتے ہیں ",
     "t4": "لیفٹیننٹ",
@@ -43,8 +43,8 @@
     "sneezeIntro": "دوسروں کو بچانے کا سب سے بہتر طریقہ یہ ہے کہ آپ وبائی بیماری کے دوران چھینک یا کھانسی کا طریقہ جانیں۔",
     "socialIntro": "معاشرتی دوری اس بیماری کو روکنے کا بہترین  طریقہ ہے۔",
     "tissueIntro": "ٹشو کا استعمال کوویڈ-19 میں خطرناک ہے",
-    "washingIntro": "5   کو ہلاک کیا جائے CoVID-19 مرحلہ طریقہ معلوم کریں جس سے ہاتھ دھو کر ",
-    "socialone": "متاثرہ شخص سے چھوٹی چھوٹی بوندیں پھیل سکتی ہے جس میں 2-3 میٹر تک کا سفر ہوتا ہے CoVID-19",
+    "washingIntro": "   کو ہلاک کیا جائے VIRUS مرحلہ طریقہ معلوم کریں جس سے ہاتھ دھو کر ",
+    "socialone": "VIRUS \nمتاثرہ شخص سے چھوٹی چھوٹی بوندیں پھیل سکتی ہے جس میں 2-3 میٹر تک کا سفر ہوتا ہے ",
     "socialtwo": "جب آپ کسی سے ملتے ہو تو کم سے کم ____ میٹر کا فاصلہ رکھیں",
     "socialthree": "اس نوک کے لئے اپنے بہترین اندازے کی نشاندہی کرنے کے لئے بار میں منتقل کریں"
   }
